--- a/less/style.less
+++ b/less/style.less
@@ -123,6 +123,7 @@ button {
                 border: 1px solid @black-03;
             }
             .look {
+                padding: 0;
                 display: inline-block;
                 border-radius: 0 1rem 1rem 0;
                 background-color: @accent-2;
